[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-debugger-env"
version = "1.0.0"
description = "An RL environment where an agent is given broken Python code and must submit a corrected version."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "openai>=1.0.0",
    "requests>=2.31.0",
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
]

[project.optional-dependencies]
server = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
]
inference = [
    "openai>=1.0.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["code_debugger_env*"]
